<resources>
    <string name="app_name"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_delta">Welcome to Delta</string>
    <string name="sign_up_to_join_an_ecosystem_to_improve_yourself">Sign up to join an ecosystem to improve yourself.</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="by_signing_up_you_agree_to_our_terms_and_conditions">By Signing up, you agree to our Terms and Conditions.</string>
    <string name="already_have_an_account_click_here">Already have an Account? Click here.</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account_click_here">Don\'t have an account? Click here.</string>
</resources>