<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:padding= "20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/delta_Title_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/welcome_to_delta"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351" />

    <EditText
        android:id="@+id/username_textbox_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:hint="@string/username"
        android:autofillHints="username"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/delta_Title_login"
        />

    <EditText
        android:id="@+id/password_textbox_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:hint="@string/password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/username_textbox_login"
        />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:backgroundTint="@color/darker_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_textbox_login"
        />

    <TextView
        android:id="@+id/textView_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_click_here"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/sign_in"
        android:gravity="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>